--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(OJ)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(OJ main.cpp 0/t1.cpp 0/t1.h)
+add_executable(OJ main.cpp 0/t1.cpp 0/t1.h chapter1/Init.cpp chapter1/Init.h chapter2/Brute.cpp chapter2/Brute.h)
